# speedreader-rust-ffi

./: .gitignore  BUILD.gn  Cargo.toml  Makefile  README.md  cbindgen.toml  config.gni
examples/cpp/: main.cpp
examples/data/: bbc_1_expected.html
src/: lib.h  lib.rs  wrapper.cpp  wrapper.hpp
